<resources>
    <string name="app_name">ProResto Admin</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="insciption">Inscription</string>
    <string name="compte_perdu">Compte perdu</string>
    <string name="tunisia_export">Tunisia Export</string>
    <string name="navigation_drawer_open">Ouvrir</string>
    <string name="navigation_drawer_close">Fermer</string>
    <string name="logo">logo cepex</string>
    <string name="bus">bus screen</string>
    <string name="second_activity">second Activity</string>
    <string name="email">Entrer votre email</string>
    <string name="identifiant">Entrer votre identifiant</string>
    <string name="mot_de_passe">Entrer votre mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="garder_ma_session_active">Garder ma session active</string>
    <string name="email_">Email</string>
    <string name="mdp">Mot de passe</string>
    <string name="creation_de_compte">Création de compte</string>
    <string name="vous_navez_pas_de_compte">Vous n\'avez pas de compte ?</string>
    <string name="suivant">Suivant</string>
    <string name="obilgatoire">Obligatoire</string>
    <string name="confirmer_votre_mdp">Confirmer votre mot de passe</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="nom_de_société">Nom de société</string>
    <string name="numero_de_battante">Numéro de battante</string>
    <string name="confirmer">Confirmer</string>
    <string name="lieux_de_societe">Lieux de société</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié</string>
    <string name="code_de_confirmation">Code de confirmation</string>
    <string name="mise_a_jour">mise à jour</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Principal</string>
    <string name="title_dashboard">Menu</string>
    <string name="title_caisse">Caisse</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_menu">Paramètrage </string>
    <string name="title_activity_detail_livraison">ScrollingActivity</string>
    <string name="title_etat_de_stock">Etat de Stock</string>
    <string name="title_detail_solde">Détail Solde Client</string>
    <string name="title_credit_client">Crédit Client</string>
    <string name="title_stock">Stock</string>
    <string name="title_article">Article</string>
    <string name="title_client">Client</string>
    <string name="title_vente">Vente</string>

    <string name="title_client_nn_mouvemente">Clients non mouvementé </string>


    <string name="title_fiche_article">Fcihe Article</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"


    </string>
    <string name="title_activity_etat_de_stock">EtatDeStockActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_fiche_article">FicheArticleActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_rapport">RapportActivity</string>


    <string name="tab_livraison">Livraison</string>
    <string name="tab_retour">Retour</string>
    <string name="tab_gratuit">Gratuit</string>
    <string name="tab_caisse">Caisse Recette</string>


</resources>