<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_stock"
        android:name="com.example.prorestoadmin.ui.stock.StockMenuFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_stock_menu" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.example.prorestoadmin.ui.stock.StockMenuFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_stock_menu" />

    <fragment
        android:id="@+id/navigation_client"
        android:name="com.example.prorestoadmin.ui.stock.StockMenuFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_stock_menu" />

    <fragment
        android:id="@+id/navigation_vente"
        android:name="com.example.prorestoadmin.ui.stock.StockMenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_stock_menu" />


</navigation>